--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     </style>
 </head>
 <body>
-    <iframe src="FiveDesignSheets_JaidynArneill.pdf" allowfullscreen></iframe>
+    <iframe src="https://raw.githubusercontent.com/username/your-repo/branch/FiveDesignSheets_JaidynArneill.pdf" allowfullscreen></iframe>
 </body>
 </html>
